--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -83,7 +83,7 @@ background-color: rgb(206,206,206);
 }
 
 #button_del{
-background-image: url(./pic/backspace.png);
+background-image: url(/home/dominik/Calculator/pic/backspace.png);
 background-repeat: no-repeat;
 background-position: center;
 border-radius: 10px;
@@ -182,7 +182,7 @@ background-color: rgb(229,90,44);
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Přidá levou závorku&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Přidat levou závorku&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="styleSheet">
         <string notr="true"/>
@@ -282,7 +282,7 @@ background-color: rgb(229,90,44);
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Smaže celý výraz i výsledek&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Smazat celý výraz&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="whatsThis">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Clears expression and result&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -354,7 +354,7 @@ background-color: rgb(229,90,44);
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Přidá pravou závorku&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Přidat pravou závorku&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>)</string>
@@ -487,6 +487,9 @@ background-color: rgb(229,90,44);
          <width>70</width>
          <height>70</height>
         </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="toolTip">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Desetinná čárka&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -689,7 +692,7 @@ background-color: rgb(229,90,44);
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Vypočítá výsledek&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Vypočítat&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>=</string>
@@ -704,7 +707,7 @@ background-color: rgb(229,90,44);
       <x>60</x>
       <y>0</y>
       <width>341</width>
-      <height>71</height>
+      <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -746,7 +749,7 @@ background-color: rgb(229,90,44);
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="toolTip">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Smaže poslední znak výrazu&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Smazat poslední znak&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="text">
      <string/>
@@ -773,6 +776,12 @@ background-color: rgb(229,90,44);
       <height>40</height>
      </size>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Zobrazit nápovědu&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
     <property name="text">
      <string>?</string>
     </property>
@@ -781,23 +790,29 @@ background-color: rgb(229,90,44);
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>0</y>
       <width>401</width>
-      <height>521</height>
+      <height>581</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:16pt; font-weight:700;&quot;&gt;Nápověda&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:700;&quot;&gt;Nápověda&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;+ - × ÷ &lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Pro použití operací sčítání, odčítání, násobení a dělení &lt;br/&gt;je nejprve třeba zadat první číslo, následně zvolit příslušnou &lt;br/&gt;operaci a poté zadat druhé číslo.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;xⁿ &lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Pro použití operace n-té mocniny je nejprve třeba zadat &lt;br/&gt;číslo (základ), následně zvolit operaci n-tá mocnina &lt;br/&gt;a poté zadat číslo, na které bude první číslo &lt;br/&gt;umocněno (exponent).&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;ⁿ√x &lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Pro použití operace n-té odmocniny je nejprve třeba zadat &lt;br/&gt;číslo odpovídající stupni odmocniny, následně zvolit &lt;br/&gt;operaci n-tá odmocnina a poté zadat číslo,&lt;br/&gt;které bude odmocněnec.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;x&lt;/span&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;!&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Pro použití operace faktoriál je nejprve třeba zadat číslo,&lt;br/&gt;nad kterým chceme faktoriál vypočítat a následně &lt;br/&gt;stisknout příslušné tlačítko faktoriál.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;%&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Pro použití operace modulo je nejprve třeba zadat první &lt;br/&gt;číslo, následně zvolit operaci modulo&lt;br/&gt;a poté zadat druhé číslo.&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p align=&quot;justify&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="button_closeHelp">
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>70</y>
+      <y>10</y>
       <width>40</width>
       <height>40</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Zavřít nápovědu&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="text">
      <string>×</string>
