novy package, edit Makefile a .pro file
+ smazani neplatneho testu

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -83,7 +83,7 @@ background-color: rgb(206,206,206);
 }
 
 #button_del{
-background-image: url(/home/dominik/Calculator/pic/backspace.png);
+background-image: url(/pic/backspace.png);
 background-repeat: no-repeat;
 background-position: center;
 border-radius: 10px;
